--- a/config/datalake.yaml
+++ b/config/datalake.yaml
@@ -1,12 +1,12 @@
 nyc_data:
-  folder_path: data
-datalek:
+  folder_path: Data
+datalake:
   endpoint: localhost:9000
   bucket_name_1: raw
   bucket_name_2: processed
   bucket_name_3: sandbox
   folder_name: batch
-  acess_key: minio_acess_key
+  access_key: minio_access_key
   secret_key: minio_secret_key
   
 
