complete airflow elt

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 AIRFLOW_UID=197609
+AIRFLOW_PROJ_DIR=./Airflow
+MINIO_ENDPOINT="localhost:9000"
+MINIO_ACCESS_KEY="minio_access_key"
+MINIO_SECRET_KEY="minio_secret_key"
