--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
     volumes:
       - minio_storage:/data
     environment:
+      MINIO_END_POINT: localhost:9000
       MINIO_ACCESS_KEY: minio_access_key
       MINIO_SECRET_KEY: minio_secret_key
     command: server --console-address ":9001" /data
